--- a/src/pages/choice/choice.html
+++ b/src/pages/choice/choice.html
@@ -233,7 +233,7 @@
                 <span style="    color: black;
                 background: pink;" *ngIf="main.totalagasi==0"> 신규{{main.lack}}</span>
                 <span style="color: black;
-                background: yellow;" *ngIf="main.totalagasi!=0"> 빵{{main.lack}} </span>
+                background: yellow;" *ngIf="main.totalagasi!=0 && main.lack>=0"> 빵{{main.lack}} </span>
 
                 <span  style="
                 border: solid 1px;
