--- a/src/pages/choicemodal2/choicemodal2.html
+++ b/src/pages/choicemodal2/choicemodal2.html
@@ -5,9 +5,11 @@
 <ion-content class="main-view" style="background: transparent;
 background-color: transparent;
 height: 40%;
+    overflow: scroll;
 top: 30%;" padding>
 
-  <div class="modal_content">
+  <div style="
+  overflow: scroll;" class="modal_content">
 
         <div class="img">
           <div style="width: 100%; height:70px;">
