--- a/src/pages/infomodal/infomodal.html
+++ b/src/pages/infomodal/infomodal.html
@@ -4,7 +4,8 @@
 
 <ion-content class="main-view" style="background: transparent;
 background-color: transparent;
-height: 55%;
+
+height: 450px;
 top: 10%;" padding>
 
   <div class="modal_content">
