--- a/src/pages/loginpage/loginpage.html
+++ b/src/pages/loginpage/loginpage.html
@@ -80,5 +80,18 @@
                 <button class="btn" (click)="login()">로그인</button>
                 <button class="btn" (click)="signup()">회원가입</button>
               </div> -->
+            
+
   </ion-content>
   
+  <div class="footer">
+    <div class="footer-text">
+      <p>상호명 : 와드(WAD)</p>
+      <p>주소 : 서울시 강남구 테헤란로79길 6 브이1048호</p>
+      <p>대표전화 : 070-8919-7221</p>
+      <p>사업자등록번호 : 459-47-01040</p>
+      <p>대표자명 : 노수지</p>
+      
+
+    </div>
+  </div>
