--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Ionic App</title>
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, height=device-height" />
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=nkcti132ry&submodules=geocoder"></script>
 
     <script type="text/javascript" src="
