--- a/src/pages/directorpage/directorpage.html
+++ b/src/pages/directorpage/directorpage.html
@@ -53,6 +53,12 @@
       <ion-list>
         <ion-item (click)="gotolink(7)">판매내역</ion-item>
       </ion-list>
+
+
+      <ion-list *ngIf="!paymentflag">
+        <ion-item (click)="gotopayment();">결제진행</ion-item>
+      </ion-list>
+      
       <ion-list>
         <ion-item (click)="logout();">로그아웃</ion-item>
       </ion-list>
@@ -90,7 +96,10 @@ background: white; margin-top:45px;" padding>
  
     </div>
 <div class="orderlisting" style="color:black;" *ngFor="let i of orderlist; let j = index;">
-  <p > 룸 넘버 : {{i.roomno}}</p>
+  <p *ngIf="i.logic" style="
+  margin: 0;"> 룸 번호 : {{i.roomno}}T  담당자 : {{i.incharge}} / 중방/대방 ON</p>
+  <p *ngIf="!i.logic" style="
+  margin: 0;"> 룸 번호 : {{i.roomno}}T 담당자 : {{i.incharge}}  / 중방/대방 OFF</p>
   <p > 주문일 : {{i.date}}</p>
   <p > WT : {{i.wt}}</p>
   <p style="
