--- a/src/pages/orderdetail/orderdetail.html
+++ b/src/pages/orderdetail/orderdetail.html
@@ -13,6 +13,27 @@
 <ion-content style="
 height: 80%;
 background: white;" padding>
+
+<div class="room-current">
+  <div class="chart-div">
+    <div class="name-keys">
+      <span>룸NO</span>
+      <span>담당자</span>
+      <span>인원</span>
+      <span>WT</span>
+      <span>주문</span>
+    </div>
+    <div (click)="editing(a);"  class="datas">
+      <span>{{a.name}}</span>
+      <span>{{a.incharge}}</span>
+      <span>{{a.numofpeople}} 인 </span>
+      <span>{{a.wt}}</span>
+      <span>주문</span>
+    </div>
+  </div>
+</div>
+
+
   <p style="
   color: black;
   font-size: 24px;">주종을 선택해주세요 </p>
