--- a/src/pages/parking/parking.html
+++ b/src/pages/parking/parking.html
@@ -42,6 +42,9 @@
   <ion-content>
     
 
+    <ion-list *ngIf="!paymentflag">
+      <ion-item (click)="gotopayment();">결제진행</ion-item>
+    </ion-list>
     <ion-list>
       <ion-item (click)="logout();">로그아웃</ion-item>
     </ion-list>
