--- a/src/pages/choice/choice.html
+++ b/src/pages/choice/choice.html
@@ -108,7 +108,10 @@
             <div class="message-content">
               <div class="contentmain">
                 <p *ngIf="main.avec" style="    font-size: 18px;
-                font-weight: 900;">{{main.v}} #{{main.name}} , A  {{main.incharge}} {{main.numofpeople}}명 {{main.wt}}</p>
+                font-weight: 900;">{{main.v}} #{{main.name}}  <span class="sm">A{{main.incharge}} {{main.numofpeople}}명 {{main.wt}}</span> <span class="sm" style="    color: black;
+                background: pink;" *ngIf="main.totalagasi==0"> 신규{{main.lack}}</span>
+                <span class="sm" style="color: black;
+                background: yellow;" *ngIf="main.totalagasi!=0 && main.lack>0"> 빵{{main.lack}} </span> </p>
                 <p *ngIf="!main.avec" style="    font-size: 18px;
                 font-weight: 900;">{{main.v}} #{{main.name}} <span class="sm">{{main.incharge}} {{main.numofpeople}}명 {{main.wt}}</span> <span class="sm" style="    color: black;
                 background: pink;" *ngIf="main.totalagasi==0"> 신규{{main.lack}}</span>
