--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -28,7 +28,7 @@
       <ion-buttons end>
         <button  style="color:white;"ion-button icon-only color="royal">
           <ion-icon name="person-add"></ion-icon>
-          <span>{{name}}<br>{{code}}</span>
+          <span>{{nickname}}<br>{{code}}</span>
         </button>
       </ion-buttons>
     </ion-toolbar>
@@ -210,7 +210,7 @@ border-radius
 " class="room-current">
     <div class="title-div">
       <ion-icon class="square" name="square"></ion-icon>
-      <span class="text">완료된 룸 현황 {{noagasi}}개 ,OB {{agasinum}}개</span>
+      <span class="text">완료된 룸 현황 {{agasinum}}개 ,OB {{noagasi}}개</span>
      
     </div>
 
