--- a/src/pages/ordermain/ordermain.html
+++ b/src/pages/ordermain/ordermain.html
@@ -19,7 +19,7 @@
     <ion-buttons end>
       <button  style="color:white;"ion-button icon-only color="royal">
         <ion-icon name="person-add"></ion-icon>
-        <span>{{name}}</span>
+        <span>{{nickname}}</span>
       </button>
     </ion-buttons>
     </ion-toolbar>
