--- a/src/pages/wt/wt.html
+++ b/src/pages/wt/wt.html
@@ -23,7 +23,7 @@
     <ion-buttons end>
       <button  style="color:white;"ion-button icon-only color="royal">
         <ion-icon name="person-add"></ion-icon>
-        <span>{{name}}<br>{{code}}</span>
+        <span>{{nickname}}<br>{{code}}</span>
       </button>
     </ion-buttons>
   </ion-toolbar>
