--- a/src/pages/directorpage/directorpage.html
+++ b/src/pages/directorpage/directorpage.html
@@ -23,7 +23,7 @@
       <ion-buttons end>
         <button  style="color:white;"ion-button icon-only color="royal">
           <ion-icon name="person-add"></ion-icon>
-          <span>{{name}}</span>
+          <span>{{nickname}}</span>
         </button>
       </ion-buttons>
     </ion-toolbar>
@@ -96,10 +96,12 @@ background: white; margin-top:45px;" padding>
  
     </div>
 <div class="orderlisting" style="color:black;" *ngFor="let i of orderlist; let j = index;">
-  <p *ngIf="i.logic" style="
-  margin: 0;"> 룸 번호 : {{i.roomno}}T  담당자 : {{i.incharge}} / 중방/대방 ON</p>
-  <p *ngIf="!i.logic" style="
-  margin: 0;"> 룸 번호 : {{i.roomno}}T 담당자 : {{i.incharge}}  / 중방/대방 OFF</p>
+  <p *ngIf="i.logic=='true'||i.logic==true" style="
+  margin: 0;">  <span style="    font-size: 16px;
+    background: yellow;">{{i.roomno}}T   {{i.incharge}}</span> / <span>중방/대방 ON</span> </p>
+  <p *ngIf="i.logic=='false'||i.logic==false" style="
+  margin: 0;">  <span style="    font-size: 16px;
+    background: yellow;">{{i.roomno}}T   {{i.incharge}}</span>  / <span>중방/대방 OFF</span></p>
   <p > 주문일 : {{i.date}}</p>
   <p > WT : {{i.wt}}</p>
   <p style="
@@ -111,13 +113,16 @@ background: white; margin-top:45px;" padding>
     margin: 0;"  *ngIf="j.category!='주류'">{{j.name}} , {{j.num}}개, {{j.price.toLocaleString()}}원</p>
     <br>
   </span>
-  
   <p style="
-  margin: 0;">TC : {{i.tc}}개 , {{i.money.toLocaleString()}}원</p>
+  margin: 0;"> 완티 : {{i.tcarray}} 차삼: {{i.chasamarray}}</p>
   <p style="
-  margin: 0;">연티 : {{i.yeonti}}</p>
-  <p>합계 :  {{(i.tp+i.money+(i.yeonti*10000) ).toLocaleString()}}</p>
-  <hr>
+  margin: 0;">TC : {{i.tctotal}}.{{i.chasam}}개 , {{i.money.toLocaleString()}}원</p>
+  <p style="
+  margin: 0;">연티 : {{i.yeonti}} , 연티원인 : {{i.reason}}</p>
+  <p style="    font-size: 18px;
+  background: pink;
+  width: 120px;">합계 :  {{(i.tp+i.money+(i.yeonti*10000) ).toLocaleString()}}</p>
+ <hr>
 </div>
 </div>
 <hr style="width: 90%; height: 1px; background-color: black;">
